--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "bootstrap": "^4.1.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.0.17",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
