--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
+    "dotenv": "^6.1.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.15",
+    "node-uuid": "^1.4.8",
     "path": "^0.12.7"
   }
 }
